package com.ejemplo.app.business.sagas.dominio.sagasecundaria2;

import com.ejemplo.app.business.ordermanager.dominio.ComandoPaso;
import com.ejemplo.app.business.ordermanager.dominio.ExternalId;
import com.ejemplo.app.business.sagas.dominio.comun.RefPaso5;

/** Lo que la saga secundaria 2 ordena ejecutar: la llamada REST de solicitud. */
public sealed interface ComandoPasoSecundaria2 extends ComandoPaso {

    record Solicitar(ExternalId externalId, RefPaso5 refPaso5) implements ComandoPasoSecundaria2 {}
}
