package com.ejemplo.app.business.sagas.dominio.sagasecundaria3;

/** FSM de negocio de la saga secundaria 3: un único paso síncrono. */
public enum EstadoSagaSecundaria3 {
    INICIAL,
    TERMINADA
}
