@startuml 16-clases-dominio-sagas-secundarias
title Dominio — las 3 sagas secundarias (business.sagas.dominio.sagasecundaria1/2/3)
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

abstract class "Proceso<E>\n(business.ordermanager.dominio — ver 14)" as Proceso {
  ciclo de vida común: comandoActual / aplicarYAvanzar /
  terminada / marcarPasoActualOkManual
  Sin version propia: la controla OrdenRoot (ver 14).
}

package "dominio.sagasecundaria1" {
  class SagaSecundaria1 <<@ValueObject>> {
    +{static} TIPO : TipoOrden = new TipoOrden("SECUNDARIA1")
    -refPaso1 : RefPaso1  «final»
    -refInicio : RefInicio
    -refConfirmacion : RefConfirmacion
    +{static} crear(id, ArranqueSecundaria1) : SagaSecundaria1
    +{static} rehidratar(id, externalId, refPaso1,\nrefInicio, refConfirmacion, estado, auditoria)
    +tipo() : TipoOrden  «TIPO»
    +comandoActual() : ComandoPasoSecundaria1
    +aplicarYAvanzar(ResultadoPasoSecundaria1) : SagaSecundaria1
    +terminada() : boolean  «estado == TERMINADA»
  }
  enum EstadoSagaSecundaria1 {
    INICIAL
    INICIO_HECHO
    TERMINADA
  }
  interface ComandoPasoSecundaria1 <<sealed>> {
    Iniciar(externalId, refPaso1)
    Confirmar(refInicio)
  }
  interface ResultadoPasoSecundaria1 <<sealed>> {
    Iniciada(refInicio)
    Confirmada(refConfirmacion)
  }
  note bottom of SagaSecundaria1
    Dos REST síncronos encadenados: INICIO -> CONFIRMACION.
    marcarPasoActualOkManual de INICIO exige aportar refInicio
    (lo consume CONFIRMACION); CONFIRMACION no exige datos (nadie
    consume su resultado tras ella).
  end note
}

package "dominio.sagasecundaria2" {
  class SagaSecundaria2 <<@ValueObject>> {
    +{static} TIPO : TipoOrden = new TipoOrden("SECUNDARIA2")
    -refPaso5 : RefPaso5  «final»
    -refRespuesta : RefRespuesta
    +{static} crear(id, ArranqueSecundaria2) : SagaSecundaria2
    +{static} rehidratar(id, externalId, refPaso5,\nrefRespuesta, estado, auditoria)
    +tipo() : TipoOrden  «TIPO»
    +comandoActual() : ComandoPasoSecundaria2  «solo si INICIAL»
    +aplicarYAvanzar(ResultadoPasoSecundaria2.Respuesta) : SagaSecundaria2  «delega en respuestaRecibida()»
    +terminada() : boolean  «estado == TERMINADA»
    +solicitudEnviada() : SagaSecundaria2  «INICIAL -> ESPERANDO_RESPUESTA»
    +respuestaRecibida(RefRespuesta) : SagaSecundaria2  «-> TERMINADA»
  }
  enum EstadoSagaSecundaria2 {
    INICIAL
    ESPERANDO_RESPUESTA
    TERMINADA
  }
  interface ComandoPasoSecundaria2 <<sealed>> {
    Solicitar(externalId, refPaso5)
  }
  interface ResultadoPasoSecundaria2 <<sealed>> {
    Respuesta(refRespuesta)
  }
  note bottom of SagaSecundaria2
    Un único paso SOLICITUD: la solicitud es REST, la respuesta
    llega a posteriori como evento Kafka (puede tardar). El
    agregado no sabe nada del aparcado de 3h ni de la conciliación
    REST: los orquesta la capa de aplicación (ver 20).
  end note
}

package "dominio.sagasecundaria3" {
  class SagaSecundaria3 <<@ValueObject>> {
    +{static} TIPO : TipoOrden = new TipoOrden("SECUNDARIA3")
    -refPaso7 : RefPaso7  «final»
    -refEjecucion : RefEjecucion
    +{static} crear(id, ArranqueSecundaria3) : SagaSecundaria3
    +{static} rehidratar(id, externalId, refPaso7,\nrefEjecucion, estado, auditoria)
    +tipo() : TipoOrden  «TIPO»
    +comandoActual() : ComandoPasoSecundaria3  «solo si INICIAL»
    +aplicarYAvanzar(ResultadoPasoSecundaria3.Ejecutada) : SagaSecundaria3  «-> TERMINADA directo»
    +terminada() : boolean  «estado == TERMINADA»
  }
  enum EstadoSagaSecundaria3 {
    INICIAL
    TERMINADA
  }
  interface ComandoPasoSecundaria3 <<sealed>> {
    Ejecutar(externalId, refPaso7)
  }
  interface ResultadoPasoSecundaria3 <<sealed>> {
    Ejecutada(refEjecucion)
  }
  note bottom of SagaSecundaria3
    Una única llamada REST: aplicarYAvanzar() deja el estado en
    TERMINADA directamente (sin paso intermedio).
  end note
}

Proceso <|-down- SagaSecundaria1
Proceso <|-down- SagaSecundaria2
Proceso <|-down- SagaSecundaria3

SagaSecundaria1 ..> ComandoPasoSecundaria1
SagaSecundaria1 ..> ResultadoPasoSecundaria1
SagaSecundaria2 ..> ComandoPasoSecundaria2
SagaSecundaria2 ..> ResultadoPasoSecundaria2
SagaSecundaria3 ..> ComandoPasoSecundaria3
SagaSecundaria3 ..> ResultadoPasoSecundaria3

note as NNace
  Las 3 nacen cuando la principal alcanza TERMINADA (después del
  punto de no retorno), una por cada ContextoArranque de
  contextosArranque() (ver 03 y 15): nunca se cancelan ni
  compensan. Cada TIPO (SECUNDARIA1/2/3) es la constante que
  registra el tipo de orden ante el motor, igual que en la
  principal (ver 15). Cada una es su propio OrdenRoot (ver 14): no
  hay FK ni relación de objetos con la principal, solo el
  externalId compartido. Las 3 son VO inmutables (ver 14 y 15):
  cada transición devuelve una instancia nueva; el servicio de
  aplicación correspondiente (ver 19-21) hace
  orden.reemplazarProceso(nuevaSaga, ahora) antes de guardar.
end note
@enduml
